updated prompts for parent comment

--- a/notebooks/Create LLM Inputs.ipynb
+++ b/notebooks/Create LLM Inputs.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "fe4a7126-fdf0-4255-89f6-64c53695ca93",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "RandomState(MT19937) at 0x1285FB040"
+       "RandomState(MT19937) at 0x106CF7940"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,14 +50,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "f84af713-6697-4ffc-9530-1be20d8a798d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8e68071ca7ed433891dccf02269719a7",
+       "model_id": "32b3695c9a8943b9a3974a6bf2e520f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -71,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "af2ab579d1d8436d83c14597826ad5e6",
+       "model_id": "d63cad0fb68c4d78acc6ddc6dcc75fc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0dd95006f95644398f3b806fdd3723d4",
+       "model_id": "39f0247cb095422292b5f1c901628690",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a5350db07ed54a3cb692ec0f6d7d7ab7",
+       "model_id": "03d73c075adf420782beb2ba332b6956",
        "version_major": 2,
        "version_minor": 0
       },
@@ -116,24 +116,24 @@
     "\n",
     "def wp_to_description(row):\n",
     "    if ((row['win_prob']>=0) and (row['win_prob']<0.1)):\n",
-    "        row['game_state'] = row['opp'].title() + \" are extremely likely to win.\"\n",
+    "        row['game_state'] = \"The \" + row['opp'].title() + \" are extremely likely to win.\"\n",
     "    elif ((row['win_prob']>=0.1) and (row['win_prob']<0.25)):\n",
-    "        row['game_state'] = row['opp'].title() + \" are likely to win.\"\n",
+    "        row['game_state'] = \"The \" + row['opp'].title() + \" are likely to win.\"\n",
     "    elif ((row['win_prob']>=0.25) and (row['win_prob']<0.48)):\n",
-    "        row['game_state'] = row['opp'].title() + \" are slightly likely to win.\"\n",
+    "        row['game_state'] = \"The \" + row['opp'].title() + \" are slightly likely to win.\"\n",
     "    elif ((row['win_prob']>=0.52) and (row['win_prob']<0.75)):\n",
-    "        row['game_state'] = row['team'].title() + \" are slightly likely to win.\" \n",
+    "        row['game_state'] = \"The \" + row['team'].title() + \" are slightly likely to win.\" \n",
     "    elif ((row['win_prob']>=0.75) and (row['win_prob']<0.9)):\n",
-    "        row['game_state'] = row['team'].title() + \" are likely to win.\"\n",
+    "        row['game_state'] = \"The \" + row['team'].title() + \" are likely to win.\"\n",
     "    elif ((row['win_prob']>=0.9) and (row['win_prob']<=1)):\n",
-    "        row['game_state'] = row['team'].title() + \" are extremely likely to win.\"   \n",
+    "        row['game_state'] = \"The \" + row['team'].title() + \" are extremely likely to win.\"   \n",
     "    else:\n",
     "        row['game_state'] = \"Both teams are equally likely to win.\" \n",
     "    return row\n",
     "\n",
     "data = data.map(wp_to_description)\n",
     "\n",
-    "with open('prompts/llama-wp-ling.txt') as f:\n",
+    "with open('../prompts/llama-ling.txt') as f:\n",
     "    instructions = f.read()\n",
     "        \n",
     "def create_input_context(row):\n",
@@ -143,9 +143,11 @@
     "    \n",
     "    row['input'] = (\n",
     "        \"COMMENT: \" + row[\"tokenized_comment\"] + \"\\n\" +\n",
+    "        \"PARENT COMMENT: \" + str(row['parent_comment']) + \"\\n\" +\n",
     "        \"IN-GROUP: \" + row['team'].title() + \"\\n\" +\n",
     "        \"OUT-GROUP: \" + row['opp'].title() + \"\\n\" +\n",
     "        \"GAME STATE: \" + row['game_state'] + \"\\n\"\n",
+    "        # \"WIN PROBABILITY: \" + str(np.round(row['win_prob']*100,1)) + \"%\\n\"\n",
     "        \"REF_EXPRESSIONS: \"\n",
     "    )\n",
     "    \n",
@@ -166,30 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "09d4073f-4da4-4cf6-aeaf-d6dfbc873ce2",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_json = train_data.to_pandas().to_json(orient='records', indent=4, force_ascii=False)\n",
-    "with open('data/all_train_ling_wp.json', 'w') as f:\n",
+    "with open('../data/all_train_ling.json', 'w') as f:\n",
     "    f.write(train_json)\n",
     "    \n",
     "eval_json = eval_data.to_pandas().to_json(orient='records', indent=4, force_ascii=False)\n",
-    "with open('data/all_eval_ling_wp.json', 'w') as f:\n",
+    "with open('../data/all_eval_ling.json', 'w') as f:\n",
     "    f.write(eval_json)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "814c5091-e264-45dc-b76f-6f61bb0c9562",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open('model-outputs/ref-inputs.txt', 'w') as f:\n",
-    "    for line in eval_data['input']:\n",
-    "        f.write(line[9:-18].replace('\\n', ' ') + \"\\n\")"
    ]
   },
   {
@@ -217,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
