--- a/notebooks/Evaluate Models.ipynb
+++ b/notebooks/Evaluate Models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "a0e70c37",
    "metadata": {
     "editable": true,
@@ -15,10 +15,10 @@
     {
      "data": {
       "text/plain": [
-       "RandomState(MT19937) at 0x107037140"
+       "RandomState(MT19937) at 0x104A83340"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,28 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "74d7ed56",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('model-outputs/ref-sents.txt', 'r') as f:\n",
+    "with open('../outputs/ref-labels.txt', 'r') as f:\n",
     "    label_sents = [x.strip() for x in f.readlines()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "42427b0c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(318, 19)"
+       "(318, 21)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "43c29b5e",
    "metadata": {},
    "outputs": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "40ed07bd",
    "metadata": {},
    "outputs": [
@@ -137,7 +137,7 @@
        "({'[IN]': 303, '[OUT]': 63, '[OTHER]': 46, 'None': 77}, 412)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "7cc8880e-ed25-445a-8aed-e44e8b56ef4c",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
        "{'[IN]': 0.735, '[OUT]': 0.153, '[OTHER]': 0.112}"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,13 +176,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "38f78e4c-a490-4bac-9751-6cfa5cb00aff",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Instead of weighting F1s by their actual counts, give equal weights to all classes\n",
-    "weight_f1 = {'[IN]': 0.34, '[OUT]': 0.33, '[OTHER]': 0.33}"
+    "weight_equal = {'[IN]': 0.34, '[OUT]': 0.33, '[OTHER]': 0.33}"
    ]
   },
   {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "id": "bfb846ee",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
     "    table = pd.DataFrame([recs, precs, f1s], index=['recall', 'precision', 'f1'])\n",
     "    display(table, f\"Macro F1: {f1_macro}\", f\"Weighted F1: {f1_macro_weighted}\", f\"None accuracy: {none_acc}\")\n",
     "\n",
-    "wer = load('wer')"
+    "# wer = load('wer')"
    ]
   },
   {
@@ -283,30 +283,107 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 21,
    "id": "f31f1b35-9067-4b82-9ad2-70b6f601399f",
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[168], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmodel-outputs/llama-qlora/wp/sents.txt\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[1;32m      2\u001b[0m     pred_sents \u001b[38;5;241m=\u001b[39m [x\u001b[38;5;241m.\u001b[39mstrip()  \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m f\u001b[38;5;241m.\u001b[39mreadlines()]\n\u001b[0;32m----> 4\u001b[0m label_mat \u001b[38;5;241m=\u001b[39m \u001b[43mbuild_conf_mat\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpred_sents\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_sents\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      5\u001b[0m print_scores(label_mat, counts, all_tags_count)\n\u001b[1;32m      6\u001b[0m display(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mWER: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnp\u001b[38;5;241m.\u001b[39mround(wer\u001b[38;5;241m.\u001b[39mcompute(predictions\u001b[38;5;241m=\u001b[39mpred_sents,\u001b[38;5;250m \u001b[39mreferences\u001b[38;5;241m=\u001b[39mlabel_sents)\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m100\u001b[39m,\u001b[38;5;241m1\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[94], line 7\u001b[0m, in \u001b[0;36mbuild_conf_mat\u001b[0;34m(pred_sents, label_sents)\u001b[0m\n\u001b[1;32m      5\u001b[0m pattern \u001b[38;5;241m=\u001b[39m re\u001b[38;5;241m.\u001b[39mcompile(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m(\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m[IN\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m]|\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m[OUT\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m]|\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m[OTHER\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m])\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m ind \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(label_sents)):\n\u001b[0;32m----> 7\u001b[0m     pred \u001b[38;5;241m=\u001b[39m \u001b[43mpred_sents\u001b[49m\u001b[43m[\u001b[49m\u001b[43mind\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m      8\u001b[0m     ref \u001b[38;5;241m=\u001b[39m label_sents[ind]\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(re\u001b[38;5;241m.\u001b[39mfindall(pattern, ref))\u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>[IN]</th>\n",
+       "      <th>[OUT]</th>\n",
+       "      <th>[OTHER]</th>\n",
+       "      <th>micro_avg</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>recall</th>\n",
+       "      <td>0.553</td>\n",
+       "      <td>0.365</td>\n",
+       "      <td>0.337</td>\n",
+       "      <td>0.500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>precision</th>\n",
+       "      <td>0.898</td>\n",
+       "      <td>0.767</td>\n",
+       "      <td>1.000</td>\n",
+       "      <td>0.519</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>f1</th>\n",
+       "      <td>0.684</td>\n",
+       "      <td>0.495</td>\n",
+       "      <td>0.504</td>\n",
+       "      <td>0.509</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            [IN]  [OUT]  [OTHER]  micro_avg\n",
+       "recall     0.553  0.365    0.337      0.500\n",
+       "precision  0.898  0.767    1.000      0.519\n",
+       "f1         0.684  0.495    0.504      0.509"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Macro F1: 0.561'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Weighted F1: 0.635'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'None accuracy: 0.922'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "with open('model-outputs/llama-qlora/wp/sents.txt', 'r') as f:\n",
+    "with open('../outputs/seed-1-sample-sents-chkpt.txt', 'r') as f:\n",
     "    pred_sents = [x.strip()  for x in f.readlines()]\n",
     "\n",
     "label_mat = build_conf_mat(pred_sents, label_sents)\n",
-    "print_scores(label_mat, counts, all_tags_count)\n",
-    "display(f\"WER: {np.round(wer.compute(predictions=pred_sents, references=label_sents)*100,1)}\")"
+    "print_scores(label_mat, counts, all_tags_count)"
    ]
   },
   {
@@ -641,68 +718,6 @@
     "\n",
     "bootstrap(no_wp, ling_wp_temp)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bf4cb773",
-   "metadata": {},
-   "source": [
-    "## Automated metrics"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "40ea73b3-7d49-420f-a3dc-f5240a4d66c2",
-   "metadata": {},
-   "source": [
-    "### WER"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "id": "5da89d7a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
-   "id": "769232d2-f467-4a18-bd55-7ea22fcb2905",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10.4"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "with open('model-outputs/llama/wp/seed1_sents.txt', 'r') as f:\n",
-    "    pred_sents = [x.strip()  for x in f.readlines()]\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f8fa62e-7c23-4deb-9987-7cc37ecba53b",
-   "metadata": {},
-   "source": [
-    "### GLEU"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c128ebc-5029-433b-ae96-e88d6b974e48",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -721,7 +736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
